# framebufferd

./: .gitignore  Cargo.toml  README.md
capturer/: Cargo.toml
capturer/examples/: capture.rs
capturer/src/: drm.rs  framebuffer.rs  lib.rs
examples/: client_hyper.rs
framebufferd/: Cargo.toml
framebufferd/src/: data_storage.rs  main.rs  prompter.rs
