[workspace]
resolver = "3"
members = ["capturer", "framebufferd"]

[package]
name = "framebufferd-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "client_hyper"
path = "examples/client_hyper.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

# Dependencies for the hyper client example
hyper = { version = "1.5", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
