[package]
name = "framebufferd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "framebufferd"
path = "src/main.rs"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
nix = { version = "0.30.1", features = ["user", "socket"] }
rfd = "0.16"
rayon = "1.11.0"
num_cpus = "1.17.0"
http-body-util = "0.1.3"
tokio-sqlite = "0.1.7"
chrono = "0.4.42"
uuid = { version = "1.19.0", features = ["v4"] }
url = "2.5.7"
serde_json = "1.0.145"
serde = "1.0.228"
capturer = { path = "../capturer" }
ctrlc = "3.5.1"
image = "0.25.9"
